--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <canvas id="app"></canvas>
+    <script src="https://wgld.org/j/minMatrix.js"></script>
     <script src="./js/app.ts"></script>
   </body>
 </html>
