--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,17 @@
       canvas {
         display: block;
       }
+
+      button {
+        position: fixed;
+        right: 20px;
+        bottom: 20px;
+      }
     </style>
   </head>
   <body>
     <canvas id="app"></canvas>
+    <button type="button" id="btn">Change</button>
     <script src="https://wgld.org/j/minMatrix.js"></script>
     <script src="./js/app.ts"></script>
   </body>
