--- a/src/index.html
+++ b/src/index.html
@@ -20,12 +20,24 @@
         position: fixed;
         right: 20px;
         bottom: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 60px;
+        height: 60px;
+        padding: 0;
+        margin: 0;
+        font-size: 20px;
+        border-radius: 999em;
+        background-color: white;
+        box-shadow: 0 0 5px 0 #000;
+        cursor: pointer;
       }
     </style>
   </head>
   <body>
     <canvas id="app"></canvas>
-    <button type="button" id="btn">Change</button>
+    <button type="button" id="btn">😸</button>
     <script src="./js/app.ts"></script>
   </body>
 </html>
